--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -2,7 +2,7 @@ html,body{
   height: 100%;
 	margin: 0;
 	padding: 0;
-	background-color: #f5f5f9;
+  background-color: #f5f5f9;
 }
 a{
     text-decoration: none !important;
@@ -11,6 +11,7 @@ p{
     margin: 0;
     padding: 0;
 }
+
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
     color: #9b9b9b;
 }
@@ -64,4 +65,11 @@ input:-ms-input-placeholder { /* Internet Explorer 10+ */
     opacity: 0;
 }
 
+.commonBgColor{
+  background-color: #E9EDEF;
+}
+.box-card-pd{
+  margin: 15px 22px;
+  text-align: center;
+}
 
