--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -67,6 +67,7 @@ input:-ms-input-placeholder { /* Internet Explorer 10+ */
 // element ui 样式修改
 // 去掉card底边框
 .el-card{
+  border-radius: 16px !important;
   .el-card__header{
     border-bottom: none;
   }
@@ -82,6 +83,14 @@ input:-ms-input-placeholder { /* Internet Explorer 10+ */
 // 设置form-label行高
 .el-form-item__label{
   line-height: inherit;
+}
+.el-input__inner{
+  background-color: #E9EDEF;
+  border-radius: 25px;
+}
+.el-button.is-round{
+  padding: 12px 23px;
+  font-size: 16px;
 }
 // 设置分割线透明度
 .el-divider{
@@ -102,6 +111,17 @@ input:-ms-input-placeholder { /* Internet Explorer 10+ */
   line-height: 18px;
   padding-bottom: 5px;
   color: #9B9B9B;
+}
+.van-overlay{
+  background: linear-gradient(218deg, rgba(215, 222, 225, 0.58) 0%, rgba(212, 223, 229, 0) 100%);
+
+  .wrapper{
+    height: calc( 100% - 140px );
+    background: #FFFFFF;
+    opacity: 1;
+    margin: 60px 18px 80px;
+    border-radius: 25px;
+  }
 }
 // 公用样式
 .commonBgColor{
