--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -116,11 +116,30 @@ input:-ms-input-placeholder { /* Internet Explorer 10+ */
   background: linear-gradient(218deg, rgba(215, 222, 225, 0.58) 0%, rgba(212, 223, 229, 0) 100%);
 
   .wrapper{
-    height: calc( 100% - 140px );
     background: #FFFFFF;
     opacity: 1;
     margin: 60px 18px 80px;
     border-radius: 25px;
+    text-align: center;
+    padding: 30px 0;
+
+    .box-card{
+      margin: 30px;
+      .el-icon-location{
+        color: #FF6565;
+        font-size: 35px;
+      }
+      .visite1{
+        font-size: 12px;
+        padding-bottom: 10px;
+      }
+      .visite2{
+        font-size: 16px;
+        font-weight: 600;
+        padding: 0 15px;
+        word-break: break-all;
+      }
+    }
   }
 }
 // 公用样式
