--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -141,7 +141,7 @@ input:-ms-input-placeholder { /* Internet Explorer 10+ */
       }
     }
   }
-
+// Overlay样式修改
   .wrapperOverlay{
     background: #FFFFFF;
     opacity: 1;
@@ -190,6 +190,15 @@ input:-ms-input-placeholder { /* Internet Explorer 10+ */
     }
   }
 }
+// 提示信息样式修改
+.el-message{
+  background: rgba(35,54,70,0.5) !important;
+  border-radius: 8px !important;
+  .el-message__content{
+    color: #fff !important;
+  }
+}
+// picker-confirm样式修改
 .van-picker__confirm{
   color: #50CEC3
 }
